src/objects/B2B_Care_Ext_Connections__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will contain all the records required for connecting external system   from salesforce.</description>
    <fields>
        <fullName>Authentication_Token__c</fullName>
        <label>Authentication Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_URL__c</fullName>
        <label>Connection URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Session_Timeout__c</fullName>
        <label>Session Timeout</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_No_of_Tries__c</fullName>
        <label>UM No of Tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Care Connections</label>
</CustomObject>